<resources>
    <string name="app_name">Oregon Trail</string>
    <string name="title_activity_main_game">MainGAME</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_the_oregon_trail">WELCOME TO THE OREGON TRAIL</string>
    <string name="start">START</string>
    <string name="stats">Stats</string>
    <string name="end_day">End Day</string>
    <string name="map">Map</string>
    <string name="location">Location:</string>
    <string name="map_of_the_oregon_trail">Map of the Oregon Trail</string>
    <string name="store_information">Item information goes here!</string>
    <string name="buy">Buy</string>
</resources>